# Vehicle-Traffic-Control

./: README.md
Vehicle-Traffic-Control/: CMakeLists.txt  jsbridge.cpp  jsbridge.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Vehicle-Traffic-Map/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
Vehicle-Traffic-Map/data/: camera.kml
